Fixing display on small mobile.

--- a/project/src/styles.css
+++ b/project/src/styles.css
@@ -3,6 +3,7 @@
 @import '~https://fonts.googleapis.com/icon?family=Roboto';
 body {
   font-family: Roboto;
+  height: 100%;
 }
 
 .card {
